# rendererGL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bind.sh  debug.bat  debugGCC.bat  debugGCC.sh  debugMSVC.bat  moderateTest.py  releaseGCC.sh  simpleTest.py  test.py
data/: cubePosNormal.ply  lowPolySphere.ply  spherePosNormal.ply  spherePosNormalTriangulated.ply
src/: arena.h  defintions.h  glmath.h  glrendererEGL.cpp  glrendererX11.cpp  main.cpp  mainEGL.cpp  renderer.cpp  utility.h
src/Shaders/: fragmentShader.glsl  vertexShader.glsl
src/shaders/: debugFragmentShader.glsl  debugVertexShader.glsl  fragmentShader.glsl  triangleFS.glsl  triangleVS.glsl  vertexShader.glsl
